--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,12 @@
     <dimen name="nav_header_fontSize">32sp</dimen>
     <dimen name="news_title_fontSize">24sp</dimen>
     <dimen name="news_details_fontSize">18sp</dimen>
+    <dimen name="list_item_default_margin">20dp</dimen>
+    <dimen name="list_item_default_padding">10dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
-    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="nav_header_height">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 </resources>
