--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:layout_margin="@dimen/list_item_default_margin"
     android:padding="@dimen/list_item_default_padding"
+    android:background="@drawable/shadow6"
     >
 
     <ImageView
