--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -23,8 +23,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:textSize="@dimen/news_title_fontSize"
-        android:textAlignment="viewEnd"
         android:textColor="@color/titleFontColor"
+        android:layout_marginStart="5dp"
         android:ems="10" />
     <TextView
         android:id="@+id/news_list_item_details"
@@ -34,7 +34,8 @@
         android:layout_below="@id/news_list_item_title"
         android:layout_alignParentEnd="true"
         android:textSize="@dimen/news_details_fontSize"
-        android:textAlignment="viewEnd"
+        android:layout_marginTop="@dimen/textFields_default_margin"
+        android:layout_marginStart="5dp"
         android:ems="10" />
 
 </RelativeLayout>
