--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#536dfe</color>
     <color name="titleFontColor">#000</color>
+    <color name="primaryBackground">#fff</color>
+    <color name="secondaryBackground">#ddd</color>
 </resources>
