--- a/app/src/main/res/layout/fragment_news_editor.xml
+++ b/app/src/main/res/layout/fragment_news_editor.xml
@@ -6,16 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.kareem.newme.News.NewsEditorFragment"
     tools:showIn="@layout/activity_news_editor">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/fab_margin"
         >
         <ImageView
             android:id="@+id/news_edit_imageView"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:contentDescription="@string/news_image"
             android:layout_gravity="center"
@@ -40,13 +42,13 @@
             android:layout_marginTop="@dimen/textFields_default_margin"
             />
     </LinearLayout>
-
+    </ScrollView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_save" />
+        app:srcCompat="@android:drawable/ic_menu_edit" />
 
 </android.support.design.widget.CoordinatorLayout>
