--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="list_item_default_margin">25dp</dimen>
     <dimen name="list_item_default_padding">12dp</dimen>
     <dimen name="textFields_default_margin">15dp</dimen>
+    <dimen name="default_spacing">5dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
