--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:textColor="#fff"
             android:paddingTop="4dp"
             android:paddingBottom="4dp" />
