--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kareem.newme.Authentication.LoginFragment"
-    android:background="@color/background_color"
+    android:background="@color/colorPrimary"
     >
 
     <!-- TODO: Update blank fragment layout -->
@@ -66,7 +66,7 @@
                 android:background="@drawable/loginbutton_selector"
                 android:padding="3dp"
                 android:text="@string/login"
-                android:textColor="@color/background_color"
+                android:textColor="@color/colorPrimary"
                 android:textSize="17sp"
                 android:textStyle="bold" />
         </LinearLayout>
