--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#536dfe</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00665c</color>
+    <color name="colorPrimaryLight">#00c6b3</color>
+    <color name="colorAccent">#009688</color>
     <color name="titleFontColor">#000</color>
     <color name="primaryBackground">#fff</color>
     <color name="secondaryBackground">#ddd</color>
-    <color name="background_color">#009688</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="white_greyish">#EEEEEE</color>
