--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,7 +28,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@android:color/transparent"
+                android:background="@color/colorPrimaryDark"
                 android:drawableStart="@drawable/user"
                 android:drawablePadding="8dp"
                 android:gravity="center_vertical"
@@ -48,7 +48,7 @@
                 android:id="@+id/login_password"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:background="@color/colorPrimaryDark"
                 android:drawableStart="@drawable/password"
                 android:drawablePadding="8dp"
                 android:gravity="center_vertical"
