--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -14,16 +14,18 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/maged" />
+        android:layout_marginStart="-10dp"
+        app:srcCompat="@mipmap/logo" />
 
     <TextView
+        android:id="@+id/navigation_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Maged"
+        android:paddingTop="5dp"
+        android:text="@string/anonymous"
         android:textSize="@dimen/nav_header_fontSize"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
