--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -26,6 +26,7 @@
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_menu_camera"
+            android:checkable="false"
             android:title="@string/login" />
 
     </group>
