--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:padding="@dimen/list_item_default_padding"
-    android:background="@drawable/shadow6"
+    android:background="@drawable/shadow_rectangle"
     >
 
     <ImageView
