--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     <style name="image_control_button_style">
         <item name="android:layout_width">50dp</item>
         <item name="android:layout_height">50dp</item>
-        <item name="android:padding">@dimen/default_spacing</item>
+        <item name="android:layout_margin">@dimen/default_spacing</item>
     </style>
 
 </resources>
