add layout tweaks, fix crash upoan item delete and fix empty comments crash error

--- a/app/src/main/res/layout/news_details_list_item.xml
+++ b/app/src/main/res/layout/news_details_list_item.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/news_details_textView_title"
+        android:textSize="@dimen/news_title_fontSize"
+        android:textColor="@color/titleFontColor"
         />
     <TextView
         android:layout_width="wrap_content"
