--- a/app/src/main/res/drawable/loginbutton_selector.xml
+++ b/app/src/main/res/drawable/loginbutton_selector.xml
@@ -8,7 +8,7 @@
             <solid android:color="@color/button_selectorcolor" />
         </shape></item>
 
-    <!-- By default the background will be this item -->
+    <!-- By default_image_news the background will be this item -->
     <item><shape android:shape="rectangle">
             <corners android:radius="3dp" />
 
