--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kareem.newme.News.NewsDetailsFragment"
+    android:padding="@dimen/default_spacing"
     tools:showIn="@layout/activity_news_details">
         <ListView
             android:layout_width="match_parent"
