--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -11,7 +11,8 @@
         android:layout_height="120dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@mipmap/test"
+        android:src="@mipmap/default_image_news"
+        android:scaleType="fitXY"
         android:contentDescription="@string/user_image" />
 
     <TextView
