--- a/app/src/main/res/layout/comments_list_items.xml
+++ b/app/src/main/res/layout/comments_list_items.xml
@@ -7,17 +7,25 @@
     android:layout_height="wrap_content" android:id="@+id/comments_list_name" />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:id="@+id/comments_list_content" />
+        android:layout_height="wrap_content" android:id="@+id/comments_list_date" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:id="@+id/comments_list_content"
+        android:inputType="none"
+        />
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/comments_list_edit_button"
             android:text="edit"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/comments_list_del_button"
             android:text="del"/>
     </LinearLayout>
+
 </LinearLayout>
