modify news Details adapter to work with comments and fix crashing bugs

--- a/app/src/main/res/layout/comments_list_items.xml
+++ b/app/src/main/res/layout/comments_list_items.xml
@@ -11,6 +11,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:id="@+id/comments_list_content"
+        android:textColor="#000"
         android:inputType="none"
         />
     <LinearLayout
