--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_alignParentBottom="true"
         android:background="#fff"
-        android:layout_alignParentStart="true" android:id="@+id/linearLayout">
+        android:layout_alignParentStart="true" android:id="@+id/comments_writer_holder">
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
