--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -6,12 +6,34 @@
     tools:context="com.kareem.newme.Chatting.Messages.MessagesFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+        android:background="#fff"
+        android:layout_alignParentStart="true" android:id="@+id/comments_writer_holder">
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxHeight="90dp"
+            android:layout_weight="0.80"
+            android:hint="@string/write_a_message"
+            android:id="@+id/commentWriter_EditText"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_menu_send"
+            android:padding="@dimen/default_spacing"
+            android:id="@+id/send_button" android:contentDescription="@string/button_text_send"/>
+
+    </LinearLayout>
 <android.support.v7.widget.RecyclerView
     android:id="@+id/messages_recycle_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_above="@id/comments_writer_holder"
     app:layoutManager="LinearLayoutManager"
     tools:listitem="@layout/message_list_item" />
 </RelativeLayout>
