--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -7,7 +7,7 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/news" />
         <item
-            android:id="@+id/nav_123"
+            android:id="@+id/nav_FAQََ"
             android:icon="@drawable/ic_menu_gallery"
             android:title="FAQ" />
         <item
