--- a/app/src/main/res/layout/fragment_faq_list.xml
+++ b/app/src/main/res/layout/fragment_faq_list.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:name="com.kareem.newme.FAQ.FAQFragment"
+    android:layout_width="match_parent"
+    tools:context="com.kareem.newme.FAQ.FAQFragment"
+    android:layout_height="match_parent">
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.kareem.newme.FAQ.FAQFragment"
+    android:id="@+id/faq_list"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.kareem.newme.FAQ.FAQFragment"
     tools:listitem="@layout/faq_list_item" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+</android.support.design.widget.CoordinatorLayout>
