--- a/app/src/main/res/layout/fragment_news_editor.xml
+++ b/app/src/main/res/layout/fragment_news_editor.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textLongMessage"
             android:layout_marginTop="@dimen/textFields_default_margin"
             android:hint="@string/title"/>
         <EditText
