--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,7 @@
     <!-- TODO: Update blank fragment layout -->
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.kareem.newme.Authentication.RegisterFragment"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -19,6 +20,30 @@
         android:paddingRight="@dimen/logo_default_padding"
         android:src="@drawable/new_me_logo"
         />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#f00"
+            android:text="@string/username_already_exists"
+            />
+        <EditText
+            android:id="@+id/userName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryDark"
+            android:drawableStart="@drawable/userName"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="@string/username"
+            android:inputType="textCapWords"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
+            />
+
 
         <EditText
             android:id="@+id/fullName"
@@ -64,7 +89,28 @@
             android:layout_height="1px"
             android:background="@color/white_greyish" />
 
-        <EditText
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:orientation="horizontal">
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@color/colorPrimaryDark"
+            android:drawableStart="@drawable/phone"
+            android:gravity="center_vertical"
+            android:hint="@string/phone_number"
+            android:inputType="phone"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            app:ccp_defaultNameCode="US"
+            app:ccp_contentColor="@color/white"
+            />
+            <EditText
             android:id="@+id/mobileNumber"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -80,7 +126,7 @@
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
-
+        </LinearLayout>
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
