finish registration and sending requests to the server

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -38,7 +38,7 @@
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:hint="@string/username"
-            android:inputType="textCapWords"
+            android:inputType="text"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/white"
