change primary color for the whole app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00665c</color>
-    <color name="colorPrimaryLight">#00c6b3</color>
+    <color name="colorPrimary">#4377A9</color>
+    <color name="colorPrimaryDark">#2d4d6c</color>
+    <color name="colorPrimaryLight">#5aa3ea</color>
     <color name="colorAccent">#009688</color>
     <color name="titleFontColor">#000</color>
     <color name="primaryBackground">#fff</color>
