--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -3,13 +3,17 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/home" />
+        <item
             android:id="@+id/nav_news"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/news" />
         <item
             android:id="@+id/nav_FAQََ"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="FAQ" />
+            android:title="@string/faq" />
         <item
             android:id="@+id/nav_contact_us"
             android:icon="@drawable/ic_menu_send"
@@ -17,12 +21,12 @@
         <item
             android:id="@+id/nar_231322"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="New me" />
+            android:title="@string/new_me" />
 
         <item
             android:id="@+id/nar_23122"
             android:icon="@drawable/ic_menu_share"
-            android:title="About us" />
+            android:title="@string/about_us" />
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_menu_camera"
