--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,26 @@
     <style name="register_page_edit_text">
 
     </style>
+    <style name="home_page_square_button">
+        <item name="android:layout_margin">@dimen/default_spacing</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">0.33333</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="home_button_content_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingTop">@dimen/default_spacing</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+    <style name="home_button_content_icon">
+        <item name="android:layout_width">42dp</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
 </resources>
