--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
     <style name="home_button_content_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
         <item name="android:paddingTop">@dimen/default_spacing</item>
         <item name="android:layout_gravity">center</item>
     </style>
