finish faq expandable listView

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="textFields_default_margin">15dp</dimen>
     <dimen name="default_spacing">5dp</dimen>
     <dimen name="logo_default_padding">40dp</dimen>
+    <dimen name="faq_question_text_size">18sp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
