--- a/app/src/main/res/layout/faq_list_group.xml
+++ b/app/src/main/res/layout/faq_list_group.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <TextView
-        android:id="@+id/expandedListItem"
+        android:id="@+id/listTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/faq_question_text_size"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
 </LinearLayout>
