--- a/app/src/main/res/layout/fragment_faq_list.xml
+++ b/app/src/main/res/layout/fragment_faq_list.xml
@@ -6,17 +6,13 @@
     android:layout_width="match_parent"
     tools:context="com.kareem.newme.FAQ.FAQFragment"
     android:layout_height="match_parent">
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/faq_list"
-
-    android:layout_width="match_parent"
+    <ExpandableListView
+    android:id="@+id/expandableListView"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:listitem="@layout/faq_list_item" />
+    android:layout_width="match_parent"
+    android:indicatorRight="?android:attr/expandableListPreferredItemIndicatorRight"
+    android:divider="@android:color/darker_gray"
+    android:dividerHeight="0.5dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
