--- a/app/src/main/res/layout/news_details_list_item.xml
+++ b/app/src/main/res/layout/news_details_list_item.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" android:id="@+id/news_details_image_view"
-    android:src="@mipmap/default_image_news"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:id="@+id/news_details_image_view"
+        android:src="@mipmap/default_image_news" android:scaleType="fitXY"
+        android:layout_centerInParent="true"
     />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" android:layout_alignBottom="@id/news_details_image_view" android:background="@color/overLay">
+        <TextView
+            style="@style/image_control_button_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/heart"
+            android:id="@+id/news_details_image_view_like"
+            android:text="0"
+            tools:ignore="HardcodedText"
+            android:textSize="20dp" android:textColor="@color/heartColor"
+            />
+        <ImageView
+            style="@style/image_control_button_style"
+            android:src="@drawable/edit"
+            android:id="@+id/news_details_image_view_edit"
+            />
+        <ImageView
+            style="@style/image_control_button_style"
+            android:src="@drawable/delete"
+            android:id="@+id/news_details_image_view_delete"
+            />
+    </LinearLayout>
+    </RelativeLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,26 +50,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/news_details_textView_content"
         />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            style="@style/image_control_button_style"
-            android:src="@drawable/like"
-            android:id="@+id/news_details_image_view_like"
-            />
-        <ImageView
-            style="@style/image_control_button_style"
-            android:src="@drawable/edit"
-            android:id="@+id/news_details_image_view_edit"
-            />
-        <ImageView
-            style="@style/image_control_button_style"
-            android:src="@drawable/delete"
-            android:id="@+id/news_details_image_view_delete"
-  />
-    </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
