--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -1,143 +1,216 @@
+<!-- TODO: Update blank fragment layout -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/primaryBackground"
+    android:orientation="vertical"
+    tools:context="com.kareem.newme.homePage.HomePageFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.kareem.newme.homePage.HomePageFragment"
-        android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
-            <com.daimajia.slider.library.SliderLayout
+        android:layout_height="0dp" android:layout_weight="0.25">
+
+        <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <RelativeLayout
-            android:layout_width="match_parent" android:layout_centerInParent="true" android:orientation="vertical" android:background="#5000"
-            android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="#5000"
+            android:orientation="vertical">
+
             <TextView
-            android:layout_width="wrap_content" android:textColor="@color/secondaryTextColor"
-            android:layout_height="wrap_content"
                 android:id="@+id/home_slider_title"
-                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textAlignment="center"
+                android:textColor="@color/secondaryTextColor"
                 android:textSize="18sp"
-                android:textAlignment="center" android:layout_centerInParent="true" />
+                android:textStyle="bold" />
+
             <TextView
-                android:layout_width="wrap_content" android:layout_centerHorizontal="true" android:layout_below="@id/home_slider_title"
-                android:layout_height="wrap_content" android:id="@+id/home_slider_description" android:textColor="@color/secondaryTextColor" android:textAlignment="center" />
+                android:id="@+id/home_slider_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/home_slider_title"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:textColor="@color/secondaryTextColor" />
         </RelativeLayout>
     </RelativeLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:orientation="horizontal">
-                <com.kareem.newme.homePage.SquareButton
-                    style="@style/home_page_square_button"
-                    android:id="@+id/nav_news"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:orientation="vertical" android:layout_centerInParent="true"
-                        tools:ignore="UseCompoundDrawables">
-                        <ImageView
-                            style="@style/home_button_content_icon" android:src="@drawable/news_icon" />
-                    <TextView
-                        android:text="@string/news"
-                        style="@style/home_button_content_text"
-                        />
-                    </LinearLayout>
-                </com.kareem.newme.homePage.SquareButton>
-
-                <com.kareem.newme.homePage.SquareButton
-                    style="@style/home_page_square_button"
-                    android:id="@+id/nav_login"
-                    >
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:orientation="vertical" android:layout_centerInParent="true"
-                        tools:ignore="UseCompoundDrawables">
-                        <ImageView
-                            style="@style/home_button_content_icon" android:src="@drawable/login_icon" />
-                        <TextView
-                            android:text="@string/login"
-                            style="@style/home_button_content_text"
-                            />
-                    </LinearLayout>
-                </com.kareem.newme.homePage.SquareButton>
-                <com.kareem.newme.homePage.SquareButton
-                    style="@style/home_page_square_button"
-                    android:id="@+id/nav_FAQََ"
-                    >
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:orientation="vertical" android:layout_centerInParent="true"
-                        tools:ignore="UseCompoundDrawables">
-                        <ImageView
-                            style="@style/home_button_content_icon" android:src="@drawable/faq_icon" />
-                        <TextView
-                            android:text="@string/faq"
-                            style="@style/home_button_content_text"
-                            />
-                    </LinearLayout>
-                </com.kareem.newme.homePage.SquareButton>
-            </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:orientation="horizontal">
-        <com.kareem.newme.homePage.SquareButton
-            android:id="@+id/nav_contact_us"
-            style="@style/home_page_square_button"
-            >
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/default_spacing"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_weight="0.25"
+        android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:orientation="vertical" android:layout_centerInParent="true"
-                tools:ignore="UseCompoundDrawables">
-                <ImageView
-                    style="@style/home_button_content_icon" android:src="@drawable/contact_us_icon" />
-                <TextView
-                    android:text="@string/contact_us"
-                    style="@style/home_button_content_text"
-                    />
-            </LinearLayout>
-        </com.kareem.newme.homePage.SquareButton>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <com.kareem.newme.homePage.SquareButton
-            style="@style/home_page_square_button"
-            android:id="@+id/nav_about"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:orientation="vertical" android:layout_centerInParent="true"
-                tools:ignore="UseCompoundDrawables">
-                <ImageView
-                    style="@style/home_button_content_icon" android:src="@drawable/about_icon" />
-                <TextView
-                    android:text="@string/about_us"
-                    style="@style/home_button_content_text"
-                    />
-            </LinearLayout>
-        </com.kareem.newme.homePage.SquareButton>
-        <com.kareem.newme.homePage.SquareButton
-            style="@style/home_page_square_button"
-            android:id="@+id/nav_newme"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:orientation="vertical" android:layout_centerInParent="true"
-                tools:ignore="UseCompoundDrawables">
-                <ImageView
-                    style="@style/home_button_content_icon" android:src="@drawable/newme_icon" />
-                <TextView
-                    android:text="@string/new_me"
-                    style="@style/home_button_content_text"
-                    />
-            </LinearLayout>
-        </com.kareem.newme.homePage.SquareButton>
+            <com.kareem.newme.homePage.SquareButton
+                android:id="@+id/nav_news"
+                style="@style/home_page_square_button">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        style="@style/home_button_content_icon"
+                        android:src="@drawable/news_icon" />
+
+                    <TextView
+                        style="@style/home_button_content_text"
+                        android:text="@string/news" />
+                </LinearLayout>
+            </com.kareem.newme.homePage.SquareButton>
+
+            <com.kareem.newme.homePage.SquareButton
+                android:id="@+id/nav_login"
+                style="@style/home_page_square_button">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        style="@style/home_button_content_icon"
+                        android:src="@drawable/login_icon" />
+
+                    <TextView
+                        style="@style/home_button_content_text"
+                        android:text="@string/login" />
+                </LinearLayout>
+            </com.kareem.newme.homePage.SquareButton>
+
+            <com.kareem.newme.homePage.SquareButton
+                android:id="@+id/nav_FAQََ"
+                style="@style/home_page_square_button">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        style="@style/home_button_content_icon"
+                        android:src="@drawable/faq_icon" />
+
+                    <TextView
+                        style="@style/home_button_content_text"
+                        android:text="@string/faq" />
+                </LinearLayout>
+            </com.kareem.newme.homePage.SquareButton>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.kareem.newme.homePage.SquareButton
+                android:id="@+id/nav_contact_us"
+                style="@style/home_page_square_button">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        style="@style/home_button_content_icon"
+                        android:src="@drawable/contact_us_icon" />
+
+                    <TextView
+                        style="@style/home_button_content_text"
+                        android:text="@string/contact_us" />
+                </LinearLayout>
+            </com.kareem.newme.homePage.SquareButton>
+
+            <com.kareem.newme.homePage.SquareButton
+                android:id="@+id/nav_about"
+                style="@style/home_page_square_button">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        style="@style/home_button_content_icon"
+                        android:src="@drawable/about_icon" />
+
+                    <TextView
+                        style="@style/home_button_content_text"
+                        android:text="@string/about_us" />
+                </LinearLayout>
+            </com.kareem.newme.homePage.SquareButton>
+
+            <com.kareem.newme.homePage.SquareButton
+                android:id="@+id/nav_newme"
+                style="@style/home_page_square_button">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
+
+                    <ImageView
+                        style="@style/home_button_content_icon"
+                        android:src="@drawable/newme_icon" />
+
+                    <TextView
+                        style="@style/home_button_content_text"
+                        android:text="@string/new_me" />
+                </LinearLayout>
+            </com.kareem.newme.homePage.SquareButton>
+        </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_weight="0.1"
+        android:orientation="horizontal">
+
+        <ImageView
+            style="@style/home_shareables"
+            android:src="@drawable/insta" />
+
+        <ImageView
+            style="@style/home_shareables"
+            android:src="@drawable/snapchat" />
+
+        <ImageView
+            style="@style/home_shareables"
+            android:src="@drawable/whatsapp" />
+    </LinearLayout>
 
 </LinearLayout>
