--- a/app/src/main/res/layout/message_list_item_remote.xml
+++ b/app/src/main/res/layout/message_list_item_remote.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/secondaryTextColor"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/list_item_default_padding"
@@ -35,6 +36,5 @@
         android:layout_marginLeft="@dimen/text_margin"
         android:layout_marginRight="-20dp"
         android:layout_alignParentTop="true"
-        android:text="ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
         android:layout_toStartOf="@+id/imageView2" />
 </RelativeLayout>
