--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.kareem.newme.News.NewsDetailsFragment"
     android:padding="@dimen/default_spacing"
+    android:layout_margin="@dimen/default_spacing"
     tools:showIn="@layout/activity_news_details">
     <LinearLayout
         android:orientation="horizontal"
