--- a/app/src/main/res/layout/comments_list_items.xml
+++ b/app/src/main/res/layout/comments_list_items.xml
@@ -1,32 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent" android:layout_margin="@dimen/textFields_default_margin"
     android:layout_height="wrap_content">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:id="@+id/comments_list_name" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:id="@+id/comments_list_date" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:id="@+id/comments_list_content"
-        android:textColor="#000"
-        android:inputType="none"
-        />
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="@dimen/default_spacing"
+        android:src="@drawable/active_remote"
+        app:civ_border_width="1px"
+        app:civ_border_color="@color/colorPrimary"/>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comments_list_edit_button"
-            android:text="edit"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comments_list_del_button"
-            android:text="del"/>
-    </LinearLayout>
+        android:layout_width="match_parent" android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/comments_list_name" android:text="name" android:visibility="gone" />
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/comments_list_content"
+            android:layout_marginStart="@dimen/textFields_default_margin"
+            android:padding="0dp" android:textStyle="normal"  android:text="coooonteeessssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssseeeeeeent"
+            android:textSize="13sp" android:textColor="#000"
+            android:inputType="none"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_marginStart="@dimen/textFields_default_margin" android:textSize="10sp" android:id="@+id/comments_list_date" />
+    </LinearLayout>
+    <Button android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/comments_list_edit_button" android:visibility="gone"
+    android:text="edit"/>
+    <Button
+        android:layout_width="wrap_content" android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:id="@+id/comments_list_del_button"
+        android:text="del"/>
 </LinearLayout>
