add touchImageView class

--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -210,6 +210,7 @@
 
         <ImageView
             style="@style/home_shareables"
+            android:id="@+id/home_whatsapp"
             android:src="@drawable/whatsapp" />
     </LinearLayout>
 </LinearLayout>
